# OriginDxlib

./: .gitignore  CMakeLists.txt  Log.txt  README.md  _README.md  logInfo.txt
assets/: ~$assetsEditor.pptx
assets/music/: Boss_loop.txt
include/object/: bomb.hpp  enemy.hpp  item.hpp  player.hpp  playerStatus.hpp  stage.hpp
include/object/enemyShootScripts/: 01.hpp  EnemyShootScripts.hpp
include/system/: UI.hpp  effecter.hpp  enemyIO.hpp  logger.hpp  title.hpp  utils.hpp
src/: main.cpp
src/object/: bomb.cpp  bombManager.cpp  enemy.cpp  item.cpp  player.cpp  stage.cpp
src/object/enemyShootScripts/: 01.cpp  bossShootScript00.cpp  enemyShootScript00.cpp
src/system/: UI.cpp  effecter.cpp  title.cpp  utils.cpp
stageInfos/: stg_json_gui_v4.py  stg_json_gui_v4_bulkadd_arith.py  stg_json_gui_v5.py  storyBoss.json  storyStage.json  storyStage_stage01_sample.json  storyTalk.json
stageInfos/stage01/: boss.json  stage01.json  talk.json
stageInfos/stage02/: stage02.json
